# WLD

./: .gitignore  AGENTS.md  README.md  WLD.spec  pyproject.toml  requirements.txt  sample_config.json  wld_launcher.py
.cymbal/: index.db
.github/workflows/: release-windows.yml
assets/: WLD_Logo.kra
docs/: ENCRYPTION.md  README_TECHNICAL.md  crash_diagnostics.md
tests/: conftest.py  qt_test_utils.py  test_activity_entities.py  test_analyze_audit_export.py  test_audit_export.py  test_batching.py  test_capture_privacy_runtime.py  test_config_portable_paths.py  test_crash_reporting.py  test_db_key_manager.py  test_dpapi.py  test_error_notifications.py  test_evidence_quality.py  test_keyboard_capture_buffering.py  test_llm_queue_hardening.py  test_llm_stage_traces.py  test_lmstudio_client.py  test_lmstudio_embeddings.py  test_log_audit_tool.py  test_monitoring_diagnostics.py  test_privacy.py  test_screenshot_capture_mode.py  test_semantic_coalescing.py  test_semantic_diagnostics_view_model.py  test_services_flush.py  test_services_session_lock.py  test_session_monitor_events.py  test_settings_metadata.py  test_settings_window.py  test_sqlcipher_connection.py  test_startup_database_errors.py  test_storage_components.py  test_storage_daily_summary.py  test_storage_encryption.py  test_summaries_view_model.py  test_summaries_window.py  test_summary_concurrency.py  test_summary_lifecycle.py  test_summary_search.py  test_text_reconstructor.py  (+1 more)
tools/: analyze_audit_export.py  audit_wld_log.py  export_audit_bundle.py  run_tests.sh  run_tests_headless.sh
(+67 files in other folders)
