[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog-diary"
version = "0.1.0"
description = "Local-first Windows desktop activity diary with privacy-aware summarization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "WorkLog Diary" }]
dependencies = [
  "PySide6>=6.7",
  "mss>=9.0.1",
  "requests>=2.32.0",
  "pynput>=1.7.7",
  "typing-extensions>=4.12.0",
  "sqlcipher3-wheels>=0.5.7; sys_platform == 'win32'",
  "pywin32>=306; sys_platform == 'win32'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
worklog-diary = "worklog_diary.main:main"
worklog-diary-debug = "worklog_diary.tools.debug_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
